--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,7 +165,7 @@ section.body .main h2 {
 
 .widget-simple {
   padding: 15px;
-  background-color: #f4f4f5; /* f6f7ff */
+  background-color: #f4f4f5;
   border: 1px solid #ffffff;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);
 }
@@ -422,10 +422,16 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   position: absolute;
   margin: 0px;
   padding: 0px;
-  bottom: -20px;
+  bottom: -26px;
   right: 0px;
   background-color: #ffffff;
   z-index: 1000;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  background-color: #f4f4f5;
+  border: 1px solid #ffffff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);
 }
 
 .table-options .table-context-menu ul {
@@ -438,12 +444,12 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 .table-options .table-context-menu ul li {
   margin: 0px;
   padding: 0px;
-
   text-align: left;
 }
 
 .table-options .table-context-menu ul li a {
   display: block;
+  padding: 0px 10px;
   width: 200px;
   font-size: 14px;
   text-shadow: none;
