--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; Portfolios{% endblock breadcrumbs %}
 
-{% block page_title %}<i class="icon-folder-open-alt"></i> Portfolios <small><a href="#myModal" role="button" data-toggle="modal">add</a> </small>{% endblock page_title %}
+{% block page_title %}<i class="icon-folder-open-alt"></i> Portfolios <small><a href="#modalCreate" role="button" data-toggle="modal">add</a> </small>{% endblock page_title %}
 
 {% block content %}
 
@@ -31,7 +31,7 @@
         <a href="#"><i class="icon-cog"></i></a>
         <div class="table-context-menu">
           <ul>
-            <li><a href="#" class="deleteModal" data-id="{{ portfolio.id }}">Delete modal</a></li>
+            <li><a href="#" class="modalDelete" data-id="{{ portfolio.id }}" data-name="{{ portfolio.name }}">Delete modal</a></li>
           </ul>
         </div>
       </td>
@@ -50,9 +50,7 @@
 <p>No portfolios have been created yet</p>
 {% endif %}
 
-<a href="#deleteModal" role="button" data-toggle="modal">Delete modal</a>
-
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="modalCreate" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <form method="post" action="">
     {% csrf_token %}
     <div class="modal-header">
@@ -70,17 +68,17 @@
   </form>
 </div>
 
-<div id="deleteModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+<div id="modalDelete" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="deleteModalLabel">Delete Portfolio</h3>
   </div>
   <div class="modal-body">
-    <p>Are you sure you want to delete this portfolio?  This action cannot be undone.</p>
-    <input type="hidden" id="portfolio_id" name="portfolio_id">
+    <p>Are you sure you want to delete your portfolio named <b><span id="portfolio_name"></span></b>?  This action cannot be undone.</p>
+    <input type="hidden" id="portfolio_id" name="portfolio_id" value="">
   </div>
   <div class="modal-footer">
-    <a href="/portfolios/44/delete" class="btn btn-primary">Delete portfolio</a>
+    <a href="#" class="btn btn-primary" id="modalDeleteButton">Delete portfolio</a>
     <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
   </div>
 </div>
@@ -106,45 +104,5 @@
 {% endblock sidebar %}
 
 {% block script %}
-<script type="text/javascript">
-    $(document).ready(function() {
-        $('table.table-clickable tbody tr')
-            .click(function() {
-                var href = $(this).find("a").attr("href");
-                if(href) {
-                    window.location = href;
-                }
-            });
-
-        $('table.table-clickable .table-context-menu a')
-                .click(function(e) {
-                    e.preventDefault();
-
-                    var portfolio_id = $(this).data('id');
-                    $('.modal-body #portfolio_id').val(portfolio_id);
-                    $('#deleteModal').modal('show');
-                });
-
-        $('table.table-clickable .row-options')
-            .click(
-                function(e) {
-                    e.stopPropagation();
-                })
-            .hover(
-                function(e) {
-                    $(this).find('.table-context-menu').css('display', 'block');
-                },
-                function() {
-                    $(this).find('.table-context-menu').css('display', 'none');
-                }
-            );
-
-{#        $('table.table-clickable tbody tr .row-options').click(function(e){#}
-{#            e.stopPropagation();#}
-{#            $(this).find('.table-context-menu').toggle();#}
-{#            $(this).find('.table-context-menu').addClass('table-context-menu-show');#}
-{#        });#}
-
-    });
-</script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/portfolios.js"></script>
 {% endblock script %}
