--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -405,6 +405,7 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 .table-bordered th { border-left-color: #c4c4c4; }
 
 .table-clickable tbody tr { cursor: pointer; }
+.table-clickable tbody tr a:hover { text-decoration: none; }
 
 .table-options tbody td.row-options {
   position: relative;
@@ -420,18 +421,24 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 .table-options .table-context-menu {
   display: none;
   position: absolute;
-  margin: 0px;
-  padding: 0px;
-  bottom: -26px;
+  top: 100%;
   right: 0px;
-  background-color: #ffffff;
   z-index: 1000;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
-  background-color: #f4f4f5;
-  border: 1px solid #ffffff;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);
+  padding: 5px 0;
+  margin: 2px 0 0;
+  list-style: none;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
 }
 
 .table-options .table-context-menu ul {
@@ -453,13 +460,23 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   width: 200px;
   font-size: 14px;
   text-shadow: none;
-  line-height: 25px;
+  line-height: 30px;
+  font-weight: normal;
+  color: #333333;
+  white-space: nowrap;
 }
 
 .table-options .table-context-menu ul li a:hover {
-  color: #222222;
-  background-color: #dce7f2;
-
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #0081c2;
+  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
 }
 
 .table tfoot .total th {
