--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -31,7 +31,7 @@
         <a href="#"><i class="icon-cog"></i></a>
         <div class="table-context-menu">
           <ul>
-            <li><a href="#" class="modalDelete" data-id="{{ portfolio.id }}" data-name="{{ portfolio.name }}">Delete modal</a></li>
+            <li><a href="#" class="modalDelete" data-id="{{ portfolio.id }}" data-name="{{ portfolio.name }}">Delete portfolio</a></li>
           </ul>
         </div>
       </td>
