--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -14,7 +14,7 @@
     <tr>
       <th style="width: 22%;">Name</th>
       <th class="align-right" style="width: 17%;">Last Price</th>
-      <th class="align-right" style="width: 12%;">Position</th>
+      <th class="align-right" style="width: 12%;">Shares</th>
       <th class="align-right" style="width: 12%;">Book Value<br /><span class="small">Avg Cost</span></th>
       <th class="align-right" style="width: 12%;">Market Value</th>
       <th class="align-right" style="width: 10%;">Net Gain</th>
