--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -103,6 +103,61 @@
     </div>
   </div>
 </div>
+
+<div class="widget widget-stats">
+  <div class="widget-header">
+    <h4><i class="icon-globe"></i> World Markets</h4>
+  </div>
+  <div class="widget-body">
+    <table>
+      <tr>
+        <td>Shanghai</td>
+        <td>2,345.34</td>
+        <td>+32.12 (1.39%)</td>
+      </tr>
+      <tr>
+        <td>Nikkei</td>
+        <td>11,511.81</td>
+        <td>+257.84 (2.29%)</td>
+      </tr>
+      <tr>
+        <td>Hang Seng Index	</td>
+        <td>22,854.79</td>
+        <td>+277.78 (1.23%)</td>
+      </tr>
+      <tr>
+        <td>TSEC</td>
+        <td>7,897.98</td>
+        <td>+17.08 (0.22%)</td>
+      </tr>
+      <tr>
+        <td>FTSE 100</td>
+        <td>6,325.88</td>
+        <td>+55.44 (0.88%)</td>
+      </tr>
+      <tr>
+        <td>EURO STOXX 50</td>
+        <td>2,611.89</td>
+        <td>+41.37 (1.61%)</td>
+      </tr>
+      <tr>
+        <td>CAC 40</td>
+        <td>3,691.49</td>
+        <td>+69.57 (1.92%)</td>
+      </tr>
+      <tr>
+        <td>S&P TSX</td>
+        <td>12,732.39</td>
+        <td>+71.95 (0.57%)</td>
+      </tr>
+      <tr>
+        <td>S&P/ASX 200</td>
+        <td>5,104.10</td>
+        <td>+67.50 (1.34%)</td>
+      </tr>
+    </table>
+  </div>
+</div>
 {% endblock sidebar %}
 
 {% block script %}
