--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -530,8 +530,10 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   width: 40px;
 }
 
-.table .indicator-gain { color: #57a957; } /* #32cd32 */
-.table .indicator-loss { color: #db6464; } /* #ff0000 */
+.table .indicator-gain,
+.table tfoot .total th.indicator-gain { color: #57a957; }
+.table .indicator-loss,
+.table tfoot .total th.indicator-loss { color: #db6464; }
 
 .table tr th.align-right,
 .table tr td.align-right { text-align: right; }
