--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -64,10 +64,12 @@
 {#      <td class="align-right">3.00%</td>#}
 {#    </tr>#}
     <tr class="total">
-      <th colspan="3"><strong>Total</strong></th>
+      <th><strong>Total</strong></th>
+      <th>&nbsp;</th>
+      <th>&nbsp;</th>
       <th class="align-right"><strong>${{ holding_summary.total_book_value|floatformat:2|intcomma }}</strong></th>
       <th class="align-right"><strong>${{ holding_summary.total_market_value|floatformat:2|intcomma }}</strong></th>
-      <th class="align-right"><strong>${{ holding_summary.total_net_gain_dollar|floatformat:2|intcomma }}</strong></th>
+      <th {% if holding_summary.total_net_gain_dollar > 0 %}class="align-right indicator-gain"{% elif holding_summary.total_net_gain_dollar < 0 %}class="align-right indicator-loss"{% else %}class="align-right"{% endif %}><strong>${{ holding_summary.total_net_gain_dollar|floatformat:2|intcomma }}</strong></th>
       <th class="align-right">100%</th>
       <th class="align-right">&nbsp;</th>
     </tr>
