changed color of add buttons for portfolios and holdings

--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <input type="submit" class="btn btn-primary" value="Add holding" />
+      <input type="submit" class="btn btn-success" value="Add holding" />
       <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
     </div>
     <input type="hidden" id="{{ form.stock.auto_id }}" name="{{ form.stock.html_name }}" value="">
