--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <input type="submit" class="btn btn-primary" value="Add portfolio" />
+      <input type="submit" class="btn btn-success" value="Add portfolio" />
       <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
     </div>
   </form>
