new login form to support remember me functionality

--- a/templates/profiles/signout.html
+++ b/templates/profiles/signout.html
@@ -7,7 +7,7 @@
 <div class="auth-container">
   <h1>Sign out</h1>
   <div class="widget-auth">
-    You have successfully signed out.
+    You have successfully signed out. <a href="{% url 'profile_signin' %}">Sign in</a>
   </div>
 </div>
 
