--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@ form { margin-bottom: 0px; }
 header .top { margin-bottom: 0px; }
 
 header {
-  background-color: rgba(0, 0, 0, 0.12);
+  background-color: rgba(255, 255, 255, 0.5);
   border-bottom: solid 1px rgba(0, 0, 0, 0.12);
 }
 
@@ -574,7 +574,7 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 }
 
 .widget-auth ul {
-  margin: 0px 0px 20px 0px;
+  margin: 0px 0px 10px 0px;
   padding: 0px;
   list-style-type: none;
 }
@@ -611,6 +611,19 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 }
 
 .widget-auth ul li input.input-block-level { height: 40px; }
+
+.widget-auth .remember-me label {
+  padding-bottom: 10px;
+  float: left;
+  height: 28px;
+  line-height: 28px;
+  vertical-align: middle;
+}
+
+.widget-auth .remember-me input {
+  width: 20px;
+  vertical-align: middle;
+}
 
 .widget-auth .btn-custom {
   margin: 0px;
