--- a/templates/base.html
+++ b/templates/base.html
@@ -41,23 +41,26 @@
       </div>
       <div class="utilities">
         <ul class="nav nav-pills pull-right">
-          {% if not user.is_authenticated and not 'django.contrib.auth.views.login' in request.view_name %}
+          {% if not user.is_authenticated %}
           <li><a href="{% url 'profile_create' %}">Sign up</a></li>
           {% endif %}
           {% if user.is_authenticated %}
           <li><a href="{% url 'profile_edit' %}">{{ user.get_full_name }}</a></li>
           <li><a href="{% url 'profile_signout' %}">Sign out <i class="icon-signout"></i></a></li>
-          {% elif not 'django.contrib.auth.views.login' in request.view_name %}
+          {% else %}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
             <div class="pull-right dropdown-menu login-dropdown widget-auth">
               <h3>Sign in below</h3>
-              <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+              <form method="post" action="{% url 'profile_signin' %}">
                 {% csrf_token %}
                 <ul>
-                  <li><input type="text" id="username" name="{{ login_form.username.html_name }}" placeholder="email" class="input-xlarge"></li>
+                  <li><input type="text" id="email" name="{{ login_form.email.html_name }}" placeholder="email" class="input-xlarge"></li>
                   <li><input type="password" id="password" name="{{ login_form.password.html_name }}" placeholder="password" class="input-xlarge"></li>
                 </ul>
+                <div class="remember-me">
+                  <label for="id_remember_me">Remember me</label> <input type="checkbox" id="id_remember_me" name="remember_me">
+                </div>
                 <input type="submit" value="SIGN IN" class="btn btn-large btn-block btn-custom" />
               </form>
             </div>
