--- a/templates/profiles/signin.html
+++ b/templates/profiles/signin.html
@@ -14,6 +14,27 @@
   {% endif %}
 
   <h1>PortfolioApp</h1>
-  {% include "common/widget_login.html" %}
+  <div class="widget-auth">
+    <h3>Sign in below</h3>
+    <form method="post" action="{% url 'profile_signin' %}">
+      {% csrf_token %}
+      <ul>
+        <li><input type="text" id="{{ form.email.auto_id }}" name="{{ form.email.html_name }}" placeholder="email" class="input-block-level"></li>
+        <li><input type="password" id="{{ form.password.auto_id }}" name="{{ form.password.html_name }}" placeholder="password" class="input-block-level"></li>
+      </ul>
+      <div class="remember-me">
+        <label for="remember_me">Remember me</label> <input type="checkbox" id="remember_me" name="remember_me">
+      </div>
+      <input type="submit" value="SIGN IN" class="btn btn-large btn-block btn-custom" />
+    </form>
+  </div>
 </div>
 {% endblock content %}
+
+{% block script %}
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('#id_email').focus();
+    });
+</script>
+{% endblock script %}
