renamed global Transactions to Activity

--- a/templates/portfolios/transactions/index_global.html
+++ b/templates/portfolios/transactions/index_global.html
@@ -1,11 +1,11 @@
 {% extends "base_two_columns.html" %}
 {% load endless %}
 
-{% block browser_title %}Transactions{% endblock browser_title %}
+{% block browser_title %}Activity{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; Transactions</a>{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; Activity</a>{% endblock breadcrumbs %}
 
-{% block page_title %}<i class="icon-list"></i> Transactions{% endblock page_title %}
+{% block page_title %}<i class="icon-list"></i> Activity{% endblock page_title %}
 
 {% block content %}
 
