added consolidated view of cash and holding transactions as Activity

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
       </div>
       <div class="breadcrumbs">
         <div class="container">
-          {% block breadcrumbs %}{% endblock breadcrumbs %}&nbsp;
+          {% block breadcrumbs %}{% endblock breadcrumbs %}
         </div>
       </div>
     </div>
