--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -58,7 +58,7 @@
   <tfoot>
     {% if cash %}
     <tr class="cash">
-      <td>Cash (<a href="#">manage</a>)</td>
+      <td>Cash</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td class="align-right">${{ cash.total_amount|floatformat:2|intcomma }}</td>
