--- a/templates/common/navigation_main.html
+++ b/templates/common/navigation_main.html
@@ -4,7 +4,7 @@
   {% if user.is_authenticated %}
   <li class="{% navactive request "dashboard_index" %}"><a href="{% url "dashboard_index" %}">Dashboard</a></li>
   <li class="{% navactive request "portfolio_index portfolio_create holding_index transaction_index" %}"><a href="/portfolios">Portfolios</a></li>
-  <li class="{% navactive request "transaction_global_index" %}"><a href="{% url 'transaction_global_index' %}">Activity</a></li>
+  <li class="{% navactive request "activity_index" %}"><a href="{% url 'activity_index' %}">Activity</a></li>
   {% else %}
   <li class=""><a href="/">Home</a></li>
   {% endif %}
