--- a/templates/portfolios/activity/index_paged_content.html
+++ b/templates/portfolios/activity/index_paged_content.html
@@ -14,18 +14,18 @@
       <th style="width: 25%">Comment</th>
     </tr>
   </thead>
-  {% if transactions %}
+  {% if activity %}
   <tbody>
-  {% paginate results_per_page transactions %}
-  {% for transaction in transactions %}
+  {% paginate results_per_page activity %}
+  {% for a in activity %}
   <tr>
-    <td>{{ transaction.date_transacted|date:"m/d/Y" }}</td>
-    <td>{{ transaction.get_type_display }}</td>
-    <td>{{ transaction.holding.stock.name }} ({{ transaction.holding.stock.symbol }}:{{ transaction.holding.stock.market.acr }})</td>
-    <td class="align-right">{{ transaction.quantity }}</td>
-    <td class="align-right">${{ transaction.value|floatformat:2|intcomma }}</td>
-    <td class="align-right">${{ transaction.commission|floatformat:2|intcomma }}</td>
-    <td>{{ transaction.comment|default_if_none:"" }}</td>
+    <td>{{ a.date_transacted|date:"m/d/Y" }}</td>
+    <td>{{ a.get_type_display }}</td>
+    <td>{{ a.name }}</td>
+    <td class="align-right">{{ a.quantity }}</td>
+    <td class="align-right">${{ a.value|floatformat:2|intcomma }}</td>
+    <td class="align-right">${{ a.commission|floatformat:2|intcomma }}</td>
+    <td>{{ a.comment|default_if_none:"" }}</td>
   </tr>
   {% endfor %}
   </tbody>
@@ -39,5 +39,5 @@
 </table>
   {% else %}
 </table>
-<p>You have not made any transactions.</p>
+<p>There is no activity for this account.</p>
   {% endif %}
