--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -61,8 +61,8 @@
       <td>Cash</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
-      <td class="align-right">${{ cash.total_amount|floatformat:2|intcomma }}</td>
-      <td class="align-right">${{ cash.total_amount|floatformat:2|intcomma }}</td>
+      <td class="align-right">${{ cash.total_amount|default_if_none:"0.00"|floatformat:2|intcomma }}</td>
+      <td class="align-right">${{ cash.total_amount|default_if_none:"0.00"|floatformat:2|intcomma }}</td>
       <td>&nbsp;</td>
       <td class="align-right">&nbsp;</td>
       <td class="align-right">&nbsp;</td>
