--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -13,7 +13,8 @@
 <table class="table table-striped table-striped-white table-hover table-condensed table-bordered table-clickable table-options">
   <thead>
     <tr>
-      <th style="width: 59%;">Name</th>
+      <th style="width: 47%;">Name</th>
+      <th class="align-right" style="width: 12%;">Holdings</th>
       <th class="align-right" style="width: 12%;">Book Value</th>
       <th class="align-right" style="width: 12%;">Market Value</th>
       <th class="align-right" style="width: 12%;">Net Gain</th>
@@ -24,6 +25,7 @@
   {% for portfolio in portfolios %}
     <tr>
       <td><a class="large" href="{% url 'holding_index' portfolio.id %}">{{ portfolio.name }}</a></td>
+      <td class="align-right"><span class="medium">{{ portfolio.holding_count }}</span></td>
       <td class="align-right"><span class="medium">${{ portfolio.book_value|floatformat:2|intcomma }}</span></td>
       <td class="align-right"><span class="medium">${{ portfolio.market_value|floatformat:2|intcomma }}</span></td>
       <td {% if portfolio.market_value > portfolio.book_value %}class="align-right indicator-gain"{% elif portfolio.market_value < portfolio.book_value %}class="align-right indicator-loss"{% else %}class="align-right"{% endif %}><span class="medium">${{ portfolio.net_gain_dollar|floatformat:2|intcomma }}</span><br /><span class="small">{{ portfolio.net_gain_percent|floatformat:2|intcomma }}%</span></td>
@@ -41,6 +43,7 @@
   <tfoot>
     <tr class="total">
       <th>Total</th>
+      <th>&nbsp;</th>
       <th class="align-right"><strong>${{ portfolio_summary.total_book_value|floatformat:2|intcomma }}</strong></th>
       <th class="align-right"><strong>${{ portfolio_summary.total_market_value|floatformat:2|intcomma }}</strong></th>
       <th {% if portfolio_summary.total_net_gain_dollar > 0 %}class="align-right indicator-gain"{% elif portfolio_summary.total_net_gain_dollar < 0 %}class="align-right indicator-loss"{% else %}class="align-right"{% endif %}><strong>${{ portfolio_summary.total_net_gain_dollar|floatformat:2|intcomma }}</strong></th>
