--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -8,7 +8,6 @@
 {% block page_title %}<i class="icon-book"></i> Holdings <small><a href="#modalCreate" role="button" data-toggle="modal">add</a></small>{% endblock page_title %}
 
 {% block content %}
-{% if holdings %}
 <table class="table table-striped table-striped-white table-hover table-bordered table-clickable table-options">
   <thead>
     <tr>
@@ -22,8 +21,9 @@
       <th style="width: 5%">&nbsp;</th>
     </tr>
   </thead>
+  {% if holdings %}
   <tbody>
-  {% for holding in holdings %}
+    {% for holding in holdings %}
     <tr>
       <td>
         <a class="large" href="{% url 'transaction_index' portfolio.id holding.id %}">{{ holding.stock_symbol }}:{{ holding.market_code }}</a><br />
@@ -53,7 +53,7 @@
         </div>
       </td>
     </tr>
-  {% endfor %}
+    {% endfor %}
   </tbody>
   <tfoot>
     {% if cash %}
@@ -81,6 +81,7 @@
   </tfoot>
 </table>
 {% else %}
+</table>
 <p>You currently have no holdings in this portfolio - <a href="{% url 'holding_create' portfolio.id %}">go ahead and add some now!</a></p>
 {% endif %}
 
