--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 {% if portfolios %}
-<table class="table table-striped table-striped-white table-hover table-condensed table-bordered table-clickable table-options">
+<table id="portfolios" class="table table-striped table-striped-white table-hover table-condensed table-bordered table-clickable table-options">
   <thead>
     <tr>
       <th style="width: 47%;">Name</th>
@@ -43,10 +43,10 @@
   <tfoot>
     <tr class="total">
       <th>Total</th>
-      <th>&nbsp;</th>
-      <th class="align-right"><strong>${{ portfolio_summary.total_book_value|floatformat:2|intcomma }}</strong></th>
-      <th class="align-right"><strong>${{ portfolio_summary.total_market_value|floatformat:2|intcomma }}</strong></th>
-      <th {% if portfolio_summary.total_net_gain_dollar > 0 %}class="align-right indicator-gain"{% elif portfolio_summary.total_net_gain_dollar < 0 %}class="align-right indicator-loss"{% else %}class="align-right"{% endif %}><strong>${{ portfolio_summary.total_net_gain_dollar|floatformat:2|intcomma }}</strong></th>
+      <th class="align-right"><strong id="total_holding_count"></strong></th>
+      <th class="align-right"><strong id="total_book_value"></strong></th>
+      <th class="align-right"><strong id="total_market_value"></strong></th>
+      <th class="align-right"><strong id="total_net_gain_dollar"></strong></th>
       <th>&nbsp;</th>
     </tr>
   </tfoot>
