--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -8,7 +8,7 @@
 {% block page_title %}<i class="icon-book"></i> Holdings <small><a href="#modalCreate" role="button" data-toggle="modal">add</a></small>{% endblock page_title %}
 
 {% block content %}
-<table class="table table-striped table-striped-white table-hover table-bordered table-clickable table-options">
+<table id="holdings" class="table table-striped table-striped-white table-hover table-bordered table-clickable table-options">
   <thead>
     <tr>
       <th style="width: 22%;">Name</th>
@@ -71,9 +71,9 @@
       <th><strong>Total</strong></th>
       <th>&nbsp;</th>
       <th>&nbsp;</th>
-      <th class="align-right">${{ holding_summary.total_book_value|default_if_none:"0.00"|floatformat:2|intcomma }}</th>
-      <th class="align-right">${{ holding_summary.total_market_value|default_if_none:"0.00"|floatformat:2|intcomma }}</th>
-      <th {% if holding_summary.total_net_gain_dollar > 0 %}class="align-right indicator-gain"{% elif holding_summary.total_net_gain_dollar < 0 %}class="align-right indicator-loss"{% else %}class="align-right"{% endif %}><strong>${{ holding_summary.total_net_gain_dollar|floatformat:2|intcomma }}</strong></th>
+      <th class="align-right"><span id="total_book_value">$0.00</span></th>
+      <th class="align-right"><span id="total_market_value">$0.00</span></th>
+      <th class="align-right"><span id="total_net_gain_dollar">$0.00</span></th>
       <th class="align-right">100%</th>
       <th class="align-right">&nbsp;</th>
     </tr>
