--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -454,6 +454,13 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   text-align: left;
 }
 
+.table-options .table-context-menu ul li.separator {
+  margin-top: 5px;
+  padding-bottom: 0px;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  line-height: 5px;
+}
+
 .table-options .table-context-menu ul li a {
   display: block;
   padding: 0px 10px;
