--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'portfolio_index' %}">Portfolios</a> &rarr; {{ portfolio.name }}{% endblock breadcrumbs %}
 
-{% block page_title %}<i class="icon-book"></i> Holdings <small><a href="#modalCreate" role="button" data-toggle="modal">add</a></small>{% endblock page_title %}
+{% block page_title %}<i class="icon-book"></i> Holdings <small><a href="#modalAddHolding" role="button" data-toggle="modal">add</a></small>{% endblock page_title %}
 
 {% block content %}
 <table id="holdings" class="table table-striped table-striped-white table-hover table-bordered table-clickable table-options">
@@ -48,7 +48,9 @@
         <a href="#"><i class="icon-cog"></i></a>
         <div class="table-context-menu">
           <ul>
-            <li><a href="#" class="modalDelete" data-holding-id="{{ holding.id }}" data-portfolio-id="{{ portfolio.id }}" data-name="{{ holding.stock_name }}">Delete holding</a></li>
+            <li><a href="#" class="modalAddTransactions" data-portfolio-id="{{ portfolio.id }}" data-holding-id="{{ holding.id }}" data-name="{{ holding.stock_name }}">Add Transaction</a></li>
+            <li class="separator">&nbsp;</li>
+            <li><a href="#" class="modalDeleteHolding" data-portfolio-id="{{ portfolio.id }}" data-holding-id="{{ holding.id }}" data-name="{{ holding.stock_name }}">Delete Holding</a></li>
           </ul>
         </div>
       </td>
@@ -74,17 +76,17 @@
       <th class="align-right"><span id="total_book_value">$0.00</span></th>
       <th class="align-right"><span id="total_market_value">$0.00</span></th>
       <th class="align-right"><span id="total_net_gain_dollar">$0.00</span></th>
-      <th class="align-right">100.00%</th>
+      <th class="align-right">0.00%</th>
       <th class="align-right">&nbsp;</th>
     </tr>
   </tfoot>
 </table>
 
 {% if not holdings %}
-<p>You currently have no holdings in this portfolio - <a href="#modalCreate" role="button" data-toggle="modal">go ahead and add some now!</a></p>
+<p>You currently have no holdings in this portfolio - <a href="#modalAddHolding" role="button" data-toggle="modal">go ahead and add some now!</a></p>
 {% endif %}
 
-<div id="modalCreate" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="createHoldingModalLabel" aria-hidden="true">
+<div id="modalAddHolding" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="createHoldingModalLabel" aria-hidden="true">
   <form method="post" action="{% url "holding_create" portfolio.id %}">
     {% csrf_token %}
     <div class="modal-header">
@@ -101,23 +103,69 @@
       <input type="submit" class="btn btn-success" value="Add holding" />
       <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
     </div>
-    <input type="hidden" id="{{ form.stock.auto_id }}" name="{{ form.stock.html_name }}" value="">
+    <input type="hidden" id="{{ holding_form.stock.auto_id }}" name="{{ holding_form.stock.html_name }}" value="">
   </form>
 </div>
 
-<div id="modalDelete" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="deleteHoldingModalLabel" aria-hidden="true">
+<div id="modalDeleteHolding" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="deleteHoldingModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="deleteHoldingModalLabel">Delete Holding</h3>
   </div>
   <div class="modal-body">
-    <p>Are you sure you want to delete the selected holding named <b><span id="holding_name"></span></b>?  This action cannot be undone.</p>
+    <p>Are you sure you want to delete the selected holding named <b><span class="holding_name"></span></b>?  This action cannot be undone.</p>
     <input type="hidden" id="holding_id" name="holding_id" value="">
   </div>
   <div class="modal-footer">
-    <a href="#" class="btn btn-primary" id="modalDeleteButton">Delete holding</a>
+    <a href="#" class="btn btn-primary" id="modalDeleteButton">Delete Holding</a>
     <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
   </div>
+</div>
+
+<div id="modalAddTransactions" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="addTransactionsModalLabel" aria-hidden="true">
+  <form id="transaction_form" method="post" action="">
+    {% csrf_token %}
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="addTransactionsModalLabel">Add Transactions</h3>
+    </div>
+    <div class="modal-body">
+      <p>Adding transaction for <b><span class="holding_name"></span></b>.</p>
+
+      <div class="row">
+        <div class="span2">
+          <label>Date</label>
+          <input id="{{ transaction_form.date_transacted.auto_id }}" name="{{ transaction_form.date_transacted.html_name }}" type="date" value="{% now 'Y-m-d' %}" class="span2">
+        </div>
+        <div class="span2">
+          <label>Type</label>
+          <select id="{{ transaction_form.type.auto_id }}" name="{{ transaction_form.type.html_name }}" class="span2">
+            {% for value, text in transaction_form.type.field.choices %}
+              <option value="{{ value }}">{{ text }}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="span2">
+          <label>Shares</label>
+          <input id="{{ transaction_form.quantity.auto_id }}" name="{{ transaction_form.quantity.html_name }}" type="text" class="span2" value="0">
+        </div>
+        <div class="span2">
+          <label>Price</label>
+          <input id="{{ transaction_form.value.auto_id }}" name="{{ transaction_form.value.html_name }}" type="text" class="span2" value="0.00">
+        </div>
+        <div class="span2">
+          <label>Commission</label>
+          <input id="{{ transaction_form.commission.auto_id }}" name="{{ transaction_form.commission.html_name }}" type="text" class="span2" value="0.00">
+        </div>
+      </div>
+
+    </div>
+    <div class="modal-footer">
+      <input type="submit" class="btn btn-success" value="Add Transaction" />
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+    </div>
+    <input id="transaction_holding_id" name="{{ transaction_form.holding.html_name }}" type="hidden" value="">
+  </form>
 </div>
 
 {% endblock content %}
@@ -137,6 +185,28 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/holdings.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/highcharts/highcharts.js"></script>
 <script type="text/javascript">
+    $(document).ready(function() {
+        $('#transaction_form').submit(function(e) {
+            e.preventDefault();
+            $.ajax({
+                type: 'POST',
+                url: window.location.pathname + $('#transaction_holding_id').val() + '/transactions/add/',
+                data: {
+                    'date_transacted': $('#id_date_transacted').val(),
+                    'type': $('#id_type').val(),
+                    'quantity': $('#id_quantity').val(),
+                    'value': $('#id_value').val(),
+                    'csrfmiddlewaretoken': $('[name="csrfmiddlewaretoken"]').val(),
+                    'commission': $('#id_commission').val(),
+                    'holding': $('#transaction_holding_id').val()
+                },
+                success: function(data) {
+                    location.reload(true);
+                }
+            });
+        });
+    });
+
     $(function () {
         var chart;
         $(document).ready(function() {
