added admin api log view through app

--- a/templates/common/navigation_main.html
+++ b/templates/common/navigation_main.html
@@ -19,6 +19,7 @@
       <li><a href="{% url 'portfolioapp.apps.admin.views.stock_index' %}">Stocks</a></li>
       <li><a href="{% url 'portfolioapp.apps.admin.views.market_index' %}">Markets</a></li>
       <li><a href="{% url 'portfolioapp.apps.admin.views.profile_index' %}">Users</a></li>
+      <li><a href="{% url 'portfolioapp.apps.admin.views.api_log_index' %}">API Logs</a></li>
     </ul>
   </li>
 </ul>
